[package]
name = "caroot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[env]
CAROOT_CONFIG_FILE = { value = "config.conf", relative = true, force = true }

[dependencies]
itertools = "0.10.1"
rand = "0.8.4"
hocon = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
